--- a/browse.html
+++ b/browse.html
@@ -30,83 +30,129 @@
     <section class="browse-hero">
             <h1 class="text-regular text-primary-dark">Browse our list</h1>
             <p class="text-regular text-secondary">
-                Browser our 10.000+ lists of places with<br>
-                different categories and choose your<br>
-                next bed
+                Browser our 10.000+ lists of places with different categories and choose your next bed
             </p>
     </section>
 
     <section class="listings">
         <div class="container">
-                <article class="listing-card">
-                    <img src="assets/kuta-house.jpeg" alt="Kuta House view" width="300" height="200">
-                    <div class="listing-content">
-                        <div class="listing-header">
-                            <h2 class="font-semibold text-xl text-primary-dark">Kuta House</h2>
-                            <div class="rating">
-                                <span class="rating-score font-bold text-primary">4.5</span>
-                            </div>
-                        </div>
-                        <p class="location text-secondary font-normal text-base">Bali, Indonesia</p>
-                        <p class="price">
-                            <span class="font-bold text-primary-dark">$97</span>
-                            <span class="text-secondary">/night</span>
-                        </p>
+            <figure class="listing-card">
+                <img
+                        class="listing-img"
+                        src="./assets/kuta-house.jpeg"
+                />
+                <figcaption>
+                    <div class="listing-title">
+                        <h3>Kuta House</h3>
+                        <h3>&#9733; 4.5</h3>
                     </div>
-                </article>
-
-                <article class="listing-card">
-                    <img src="assets/hilton-galveston.jpeg" alt="Hilton Galveston view" width="300" height="200">
-                    <div class="listing-content">
-                        <div class="listing-header">
-                            <h2 class="font-semibold text-xl text-primary-dark">Hilton Galveston</h2>
-                            <div class="rating">
-                                <span class="rating-score font-bold text-primary">4.1</span>
-                            </div>
-                        </div>
-                        <p class="location text-secondary font-normal text-base">Texas, US</p>
-                        <p class="price">
-                            <span class="font-bold text-primary-dark">$130</span>
-                            <span class="text-secondary">/night</span>
-                        </p>
+                    <p>Bali, Indonesia</p>
+                    <p class="semibold">$97/night</p>
+                </figcaption>
+            </figure>
+            <figure class="listing-card">
+                <img
+                        class="listing-img"
+                        src="./assets/hilton-galveston.jpeg"
+                />
+                <figcaption>
+                    <div class="listing-title">
+                        <h3>Hilton Galveston</h3>
+                        <h3>&#9733; 4.1</h3>
                     </div>
-                </article>
-
-                <article class="listing-card">
-                    <img src="assets/encuentro-guadalupe.jpeg" alt="Encuentro Guadalupe view" width="300" height="200">
-                    <div class="listing-content">
-                        <div class="listing-header">
-                            <h2 class="font-semibold text-xl text-primary-dark">Encuentro Guadalupe</h2>
-                            <div class="rating">
-                                <span class="rating-score font-bold text-primary">4.0</span>
-                            </div>
-                        </div>
-                        <p class="location text-secondary font-normal text-base">El Porvenir, Mexico</p>
-                        <p class="price">
-                            <span class="font-bold text-primary-dark">$85</span>
-                            <span class="text-secondary">/night</span>
-                        </p>
+                    <p>Texas, US</p>
+                    <p class="semibold">$130/night</p>
+                </figcaption>
+            </figure>
+            <figure class="listing-card">
+                <img
+                        class="listing-img"
+                        src="./assets/encuentro-guadalupe.jpeg"
+                />
+                <figcaption>
+                    <div class="listing-title">
+                        <h3>Encuentro Guadalupe</h3>
+                        <h3>&#9733; 4.0</h3>
                     </div>
-                </article>
-
-                <article class="listing-card">
-                    <img src="assets/oneeighty-dayclub.jpeg" alt="Oneeighty Dayclub view" width="300" height="200">
-                    <div class="listing-content">
-                        <div class="listing-header">
-                            <h2 class="font-semibold text-xl text-primary-dark">Oneeighty Dayclub</h2>
-                            <div class="rating">
-                                <span class="rating-score font-bold text-primary">4.7</span>
-                            </div>
-                        </div>
-                        <p class="location text-secondary font-normal text-base">Bali, Indonesia</p>
-                        <p class="price">
-                            <span class="font-bold text-primary-dark">$90</span>
-                            <span class="text-secondary">/night</span>
-                        </p>
+                    <p>El Porvenir, Mexico</p>
+                    <p class="semibold">$85/night</p>
+                </figcaption>
+            </figure>
+            <figure class="listing-card">
+                <img
+                        class="listing-img"
+                        src="./assets/oneeighty-dayclub.jpeg"
+                />
+                <figcaption>
+                    <div class="listing-title">
+                        <h3>Oneeighty Dayclub</h3>
+                        <h3>&#9733; 4.7</h3>
                     </div>
-                </article>
-            </div>
+                    <p>Bali, Indonesia</p>
+                    <p class="semibold">$90/night</p>
+                </figcaption>
+            </figure>
+        </div>
     </section>
 </main>
+
+<footer>
+    <div class="footer-content">
+        <section class="social">
+            <h2 class="text-medium text-primary-dark">Nginep</h2>
+            <div class="social-links">
+                <p class="text-secondary text-regular">We serve you well that you want <br> to always take a rest</p>
+                <a href="https://facebook.com/nginepaja" class="media">
+                    <img src="./assets/Facebook.png" alt="Facebook">
+                    <span class="text-regular text-secondary">nginepaja</span>
+                </a>
+                <a href="https://instagram.com/nginepaja" class="media">
+                    <img src="./assets/Instagram.png" alt="Instagram">
+                    <span class="text-regular text-secondary">@nginepaja</span>
+                </a>
+                <a href="https://twitter.com/nginepaja" class="media">
+                    <img src="./assets/Twitter%20Squared.png" alt="Twitter">
+                    <span class="text-regular text-secondary">@nginepaja</span>
+                </a>
+            </div>
+        </section>
+
+        <section class="footer-links">
+            <h3 class="text-primary-dark text-medium">Tutorial</h3>
+            <div class="footer-column">
+                <nav>
+                    <ul>
+                        <li><a href="/tutorial/new-account">Creating a new account</a></li>
+                        <li><a href="/tutorial/choose-room">Choosing a room</a></li>
+                        <li><a href="/tutorial/payment">How to pay</a></li>
+                        <li><a href="/tutorial/checkin">How to CheckIn</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="footer-column">
+                <h3 class="text-primary-dark text-medium">About</h3>
+                <nav>
+                    <ul>
+                        <li><a href="/terms">Terms & Service</a></li>
+                        <li><a href="/privacy">Privacy Policy</a></li>
+                        <li><a href="/about">About Us</a></li>
+                        <li><a href="/refund">Refund</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="footer-column">
+                <h3 class="text-primary-dark text-medium">Contact</h3>
+                <ul>
+                    <li><a href="mailto:ask@nginep.com">ask@nginep.com</a></li>
+                    <li><a href="tel:+62-21-551445">+62 21-551445</a></li>
+                    <li>Bukit Algoritma, Indonesia</li>
+                </ul>
+            </div>
+        </section>
+    </div>
+</footer>
+
 </body>
 </html>
