--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
 <main>
     <section class="hero">
         <div class="cta-hero">
-            <h1 class="text-medium text-primary-dark">A place where you can <br> <strong>take a rest peacefully</strong>
-            </h1>
-            <p class="text-secondary">Forget your work for a little while and let <br> your head and body rest
-                peacefully in
-                <br> our beautiful places</p>
+            <div class="text-hero">
+                <h1 class="text-medium text-primary-dark">
+                    A place where you can <strong>take a rest peacefully</strong>
+                </h1>
+                <p class="text-secondary">
+                    Forget your work for a little while and let your head and body rest
+                    peacefully in our beautiful places
+                </p>
+            </div>
             <a href="#popular-places" class="cta-button">Show Me</a>
         </div>
         <div class="img-hero">
@@ -156,9 +160,9 @@
 <footer>
     <div class="footer-content">
         <section class="social">
-            <h2 class="text-medium text-primary-dark">Nginep</h2>
+            <h2 class="text-medium text-primary">Nginep</h2>
+            <p class="text-secondary text-regular">We serve you well that you want <br> to always take a rest</p>
             <div class="social-links">
-                <p class="text-secondary text-regular">We serve you well that you want <br> to always take a rest</p>
                 <a href="https://facebook.com/nginepaja" class="media">
                     <img src="./assets/Facebook.png" alt="Facebook">
                     <span class="text-regular text-secondary">nginepaja</span>
@@ -175,8 +179,8 @@
         </section>
 
         <section class="footer-links">
-            <h3 class="text-primary-dark text-medium">Tutorial</h3>
             <div class="footer-column">
+                <h3 class="text-primary-dark text-medium">Tutorial</h3>
                 <nav>
                     <ul>
                         <li><a href="/tutorial/new-account">Creating a new account</a></li>
@@ -204,11 +208,12 @@
                 <ul>
                     <li><a href="mailto:ask@nginep.com">ask@nginep.com</a></li>
                     <li><a href="tel:+62-21-551445">+62 21-551445</a></li>
-                    <li>Bukit Algoritma, Indonesia</li>
+                    <li class="text-secondary">Bukit Algoritma, Indonesia</li>
                 </ul>
             </div>
         </section>
     </div>
+    <p class="text-secondary copyright">Copyright &copy; 2022 PT. Nginep Internasional Indonesia</p>
 </footer>
 </body>
 </html>
