--- a/browse.html
+++ b/browse.html
@@ -28,14 +28,69 @@
         </nav>
     </header>
     <section class="browse-hero">
-            <h1 class="text-regular text-primary-dark">Browse our list</h1>
-            <p class="text-regular text-secondary">
-                Browser our 10.000+ lists of places with different categories and choose your next bed
-            </p>
+        <h1 class="text-regular text-primary-dark">Browse our list</h1>
+        <p class="text-regular text-secondary">
+            Browser our 10.000+ lists of places with different categories and choose your next bed
+        </p>
     </section>
-
     <section class="listings">
         <div class="container">
+            <figure class="listing-card">
+                <img
+                        class="listing-img"
+                        src="./assets/kuta-house.jpeg"
+                />
+                <figcaption>
+                    <div class="listing-title">
+                        <h3>Kuta House</h3>
+                        <h3>&#9733; 4.5</h3>
+                    </div>
+                    <p>Bali, Indonesia</p>
+                    <p class="semibold">$97/night</p>
+                </figcaption>
+            </figure>
+            <figure class="listing-card">
+                <img
+                        class="listing-img"
+                        src="./assets/hilton-galveston.jpeg"
+                />
+                <figcaption>
+                    <div class="listing-title">
+                        <h3>Hilton Galveston</h3>
+                        <h3>&#9733; 4.1</h3>
+                    </div>
+                    <p>Texas, US</p>
+                    <p class="semibold">$130/night</p>
+                </figcaption>
+            </figure>
+            <figure class="listing-card">
+                <img
+                        class="listing-img"
+                        src="./assets/encuentro-guadalupe.jpeg"
+                />
+                <figcaption>
+                    <div class="listing-title">
+                        <h3>Encuentro Guadalupe</h3>
+                        <h3>&#9733; 4.0</h3>
+                    </div>
+                    <p>El Porvenir, Mexico</p>
+                    <p class="semibold">$85/night</p>
+                </figcaption>
+            </figure>
+            <figure class="listing-card">
+                <img
+                        class="listing-img"
+                        src="./assets/oneeighty-dayclub.jpeg"
+                />
+                <figcaption>
+                    <div class="listing-title">
+                        <h3>Oneeighty Dayclub</h3>
+                        <h3>&#9733; 4.7</h3>
+                    </div>
+                    <p>Bali, Indonesia</p>
+                    <p class="semibold">$90/night</p>
+                </figcaption>
+            </figure>
             <figure class="listing-card">
                 <img
                         class="listing-img"
@@ -99,9 +154,9 @@
 <footer>
     <div class="footer-content">
         <section class="social">
-            <h2 class="text-medium text-primary-dark">Nginep</h2>
+            <h2 class="text-medium text-primary">Nginep</h2>
+            <p class="text-secondary text-regular">We serve you well that you want <br> to always take a rest</p>
             <div class="social-links">
-                <p class="text-secondary text-regular">We serve you well that you want <br> to always take a rest</p>
                 <a href="https://facebook.com/nginepaja" class="media">
                     <img src="./assets/Facebook.png" alt="Facebook">
                     <span class="text-regular text-secondary">nginepaja</span>
@@ -118,8 +173,8 @@
         </section>
 
         <section class="footer-links">
-            <h3 class="text-primary-dark text-medium">Tutorial</h3>
             <div class="footer-column">
+                <h3 class="text-primary-dark text-medium">Tutorial</h3>
                 <nav>
                     <ul>
                         <li><a href="/tutorial/new-account">Creating a new account</a></li>
@@ -147,11 +202,12 @@
                 <ul>
                     <li><a href="mailto:ask@nginep.com">ask@nginep.com</a></li>
                     <li><a href="tel:+62-21-551445">+62 21-551445</a></li>
-                    <li>Bukit Algoritma, Indonesia</li>
+                    <li class="text-secondary">Bukit Algoritma, Indonesia</li>
                 </ul>
             </div>
         </section>
     </div>
+    <p class="text-secondary copyright">Copyright &copy; 2022 PT. Nginep Internasional Indonesia</p>
 </footer>
 
 </body>
